--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,12 @@
 @import "./normalize.css";
+
+/* CSS Variables */
+:root {
+  --color-dark: #000;
+  --color-darker-grey: #36304a;
+  --color-lighter-grey: #f5f5f5;
+}
+
 /* Typography */
 html {
   font-size: 62.5%;
