--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,7 @@
 
 /* CSS Variables */
 :root {
+  --color-primary: #2584ff;
   --color-dark: #000;
   --color-darker-grey: #36304a;
   --color-lighter-grey: #f5f5f5;
@@ -17,16 +18,25 @@ body {
   font-size: 1.6rem;
 }
 
-/* Heading */
+/* Header */
+.header {
+  display: grid;
+  justify-content: center;
+}
+
 .heading {
   font-size: 4rem;
   text-align: center;
 }
 
-/* Tagline */
 .tagline {
   text-align: center;
   font-size: 1.8rem;
+}
+
+.drop-down {
+  width: 20rem;
+  margin: 0 auto;
 }
 
 /* Absent Table */
@@ -52,4 +62,46 @@ th {
   color: white;
   font-weight: 500;
   padding: 1rem;
+}
+
+/* Grid */
+.grid {
+  display: grid;
+}
+
+.grid--1x2 {
+  grid-template-columns: repeat(2, 1fr);
+}
+
+.grid--1x3 {
+  grid-template-columns: repeat(3, 1fr);
+}
+
+.grid--1x4 {
+  grid-template-columns: repeat(4, 1fr);
+}
+
+/* Buttons */
+.buttons {
+  display: flex;
+  justify-content: space-evenly;
+}
+
+.btn {
+  border-radius: 40px;
+  border: 0;
+  cursor: pointer;
+  font-size: 1.4rem;
+  font-weight: 600;
+  margin: 1rem 0;
+  outline: 0;
+  padding: 2rem 4vw;
+  text-align: center;
+  text-transform: uppercase;
+  white-space: nowrap;
+}
+
+.btn-primary {
+  color: #fff;
+  background: #2584ff;
 }
